<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <LinearLayout
        android:id="@+id/lienar_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/image_all"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:src="@drawable/ic_all"
            app:tint="@color/white"
            android:contentDescription="@string/all" />

        <ImageView
            android:id="@+id/image_happy"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:src="@drawable/ic_happy"
            app:tint="@color/white"
            android:contentDescription="@string/happy" />

        <ImageView
            android:id="@+id/image_morning"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:src="@drawable/ic_sun"
            app:tint="@color/white"
            android:contentDescription="@string/sun" />

    </LinearLayout>

    <TextView
        android:id="@+id/text_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lienar_menu"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text=""
        android:textSize="18sp"
        tools:text="Olá, Marcos!"/>

    <TextView
        android:id="@+id/text_phrase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="32dp"
        android:text="@string/phrase"
        style="@style/phrase"
        tools:text="Enquanto não estivermos comprometidos, haverá hesitação!"/>

    <View
        android:layout_width="128dp"
        android:layout_height="3dp"
        android:layout_below="@id/text_phrase"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:background="@color/colorAccent" />

    <Button
        android:id="@+id/button_new_phrase"
        style="@style/button_new_phrase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:text="@string/new_phrase" />


</RelativeLayout>